[package]
name = "clifana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
reqwest = {version="0.11.13", features=["blocking","json"]}
log = "0.4.17"
toml = "0.5.10"
serde = {version = "1.0.152", features = ["derive"] }
config = { version = "0.13.3", features = ["toml"]}
anyhow = "1.0.68"
# tokio = { version = "1.23.1", features = ["full"]}
serde_json = "1.0.91"
handlebars = "4.3.6"
ratatui = "0.20.1"
crossterm = "0.26.1"
better-panic = "0.3.0"
fern = "0.6.2"